# MyNetWorking-Crews

./: .env.example  .gitignore  Dockerfile  config.py  main.py  pyproject.toml  requirements.txt  scheduler.py  schema.sql
bot/: formatters.py  keyboards.py  middleware.py
bot/handlers/: __init__.py  booking.py  challenge.py  contacts.py  debrief.py  events.py  settings.py  start.py  stats.py  voice.py
browser/: browser_worker.py  luma_booking.py  meetup_booking.py
core/: cache.py  context_builder.py  crew_tracker.py  crewai_client.py  deterministic_scorer.py  event_parser.py  preference_learner.py
db/: postgres.py  redis.py
models/: __init__.py  challenge.py  crew_run.py  event.py  methodology.py  user.py
src/networking_crews/: crew.py  main.py
src/networking_crews/config/: agents.yaml  tasks.yaml
src/networking_crews/models/: __init__.py  analyst_output.py  booking_output.py  coach_output.py  finance_output.py  onboarding_output.py  scout_output.py
src/networking_crews/tools/: __init__.py  currency.py  google_calendar.py  methodology_db.py  perplexity_search.py  transport_cost.py  user_profile.py
